[gd_scene load_steps=10 format=3 uid="uid://c5xok6r3mrare"]

[ext_resource type="Script" path="res://scripts/level objects/level.gd" id="1_f8lwr"]
[ext_resource type="Material" uid="uid://dbpbpcs1vrmu7" path="res://materials/ground_material.tres" id="2_15ey6"]
[ext_resource type="PackedScene" uid="uid://bbbw7iq0ovq3w" path="res://scenes/levels/level5.tscn" id="2_83d6g"]
[ext_resource type="PlaneMesh" uid="uid://cbwxvsrx0lasf" path="res://assets/meshes/lava_mesh.tres" id="3_5lm2j"]
[ext_resource type="PackedScene" uid="uid://di0y35kpo35fi" path="res://scenes/floating_text.tscn" id="4_k6yti"]
[ext_resource type="PackedScene" uid="uid://bvee6hqj0cct" path="res://scenes/level_switcher.tscn" id="6_vsj7p"]
[ext_resource type="PackedScene" uid="uid://c3c28ojlngjnx" path="res://scenes/path_enemy.tscn" id="7_38ck0"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_0noml"]

[sub_resource type="Curve3D" id="Curve3D_x27p8"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 0, 0.5, 0, 0, 0, 0, 0, 0, 0, 0, 0.5, -10, 0, 0, 0, 0, 0, 0, 0, 0.5, 0),
"tilts": PackedFloat32Array(0, 0, 0)
}
point_count = 3

[node name="Level4" type="Node3D"]
script = ExtResource("1_f8lwr")
next_level = ExtResource("2_83d6g")

[node name="LevelPhysical" type="CSGCombiner3D" parent="."]
use_collision = true

[node name="CSGBox3D" type="CSGBox3D" parent="LevelPhysical"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.01483, 0)
size = Vector3(6.26855, 1, 3.27441)
material = ExtResource("2_15ey6")

[node name="CSGBox3D2" type="CSGBox3D" parent="LevelPhysical"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.661)
size = Vector3(1.6582, 1, 1.1272)
material = ExtResource("2_15ey6")

[node name="CSGBox3D6" type="CSGBox3D" parent="LevelPhysical"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.16706, 0, -9.36406)
size = Vector3(1.6582, 1, 12.5333)
material = ExtResource("2_15ey6")

[node name="CSGBox3D3" type="CSGBox3D" parent="LevelPhysical"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -7.26352)
size = Vector3(1.6582, 1, 1.1272)
material = ExtResource("2_15ey6")

[node name="CSGBox3D4" type="CSGBox3D" parent="LevelPhysical"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -11.0271)
size = Vector3(1.6582, 1, 1.1272)
material = ExtResource("2_15ey6")

[node name="CSGBox3D5" type="CSGBox3D" parent="LevelPhysical"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -14.2692)
size = Vector3(1.6582, 1, 1.1272)
material = ExtResource("2_15ey6")

[node name="Lava" type="Area3D" parent="LevelPhysical"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10.5115, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="LevelPhysical/Lava"]
shape = SubResource("WorldBoundaryShape3D_0noml")

[node name="MeshInstance3D" type="MeshInstance3D" parent="LevelPhysical/Lava"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -15.7143)
mesh = ExtResource("3_5lm2j")

[node name="Avoid Enemies!" parent="LevelPhysical" instance=ExtResource("4_k6yti")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.3696, -4.91287)
label_text = "Watch out for enemies!"

[node name="Coins" type="Node3D" parent="."]

[node name="LevelSwitcher" parent="." instance=ExtResource("6_vsj7p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.23668, -14.2211)

[node name="Enemy Paths" type="Node3D" parent="."]

[node name="Path 1" type="Path3D" parent="Enemy Paths"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.14574, 1.06926, -3.72965)
curve = SubResource("Curve3D_x27p8")

[node name="PathFollow3D" type="PathFollow3D" parent="Enemy Paths/Path 1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
rotation_mode = 0

[node name="Enemy" parent="Enemy Paths/Path 1/PathFollow3D" instance=ExtResource("7_38ck0")]

[connection signal="body_entered" from="LevelPhysical/Lava" to="." method="lava_hit"]
[connection signal="body_entered" from="LevelSwitcher" to="." method="change_level"]
